--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,17 @@
 # Profile information
-name: Fresh
-title: Fresh - Free Jekyll Theme
+name: Dimitris Diamadopoulos
+title: My resume
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My resume.
 permalink: ':title/'
 baseurl: "/resume-cv" # the subpath of your site, e.g. /blog
 url: "https://dhmhtrhsd.github.io/resume-cv" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social
-facebook: #Add your Facebook
-twitter: #Add your Twitter
-google-plus: #Add your Google+
-github: #Add your Github
+facebook: https://www.facebook.com/dimitris.diamadopoulos
+twitter: https://twitter.com/jimakos98
+github: https://github.com/dhmhtrhsd
 
-# Contact form
-email: #your-email@domain.com
 
 # Comments
 discus-identifier: # Add your Disqus identifier
