--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "https://dhmhtrhsd.github.io/resume-cv" # the base hostname & protocol for 
 
 # Social
 facebook: dimitris.diamadopoulos
-twitter: imakos98
+twitter: jimakos98
 github: dhmhtrhsd
 
 
