--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Profile information
-name: Dimitris Diamadopoulos
+name: Diamantopoulos Dimitris
 title: My resume
 description: > # this means to ignore newlines until "baseurl:"
   My resume.
